# NetGuard

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/clsoft/netguard/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/clsoft/netguard/: MainActivity.kt  NetGuardApp.kt
app/src/main/java/com/clsoft/netguard/navigation/: BottomNavItem.kt  NavGraph.kt
app/src/main/java/com/clsoft/netguard/ui/components/: BottomNavigationBar.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/clsoft/netguard/: ExampleUnitTest.kt
core/: build.gradle.kts
core/src/androidTest/java/com/clsoft/netguard/core/: ExampleInstrumentedTest.kt
core/src/test/java/com/clsoft/netguard/core/: ExampleUnitTest.kt
engine/detector/: build.gradle.kts
engine/detector/src/main/assets/: traffic_model.tflite
engine/network-analyzer/: build.gradle.kts
engine/network-analyzer/src/main/cpp/: CMakeLists.txt  FirewallBridge.cpp  FirewallController.cpp  FirewallController.hpp  PacketAnalyzer.cpp  PacketAnalyzer.hpp  analyzer.cpp
features/analyzer/: build.gradle.kts
features/dashboard/: build.gradle.kts
features/firewall-rules/: build.gradle.kts
features/settings/: build.gradle.kts
features/traffic-monitor/: build.gradle.kts
framework/: build.gradle.kts
framework/src/androidTest/java/com/clsoft/netguard/framework/: ExampleInstrumentedTest.kt
framework/src/test/java/com/clsoft/netguard/framework/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+142 files in other folders)
